ci: improve logging, add retries

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,15 @@ PORT=3000
 
 # Logging Configuration
 LOG_LEVEL=info
+LOG_HASH_SECRET=change-me-in-production
+LOG_DEBUG_PAYLOADS=false
+
+# OpenAI Configuration
+OPENAI_TIMEOUT_MS=30000
+OPENAI_RETRY_MAX=2
+OPENAI_RETRY_BASE_MS=1000
+
+# Budget Alerts
+BUDGET_MAX_TOKENS=8000
+BUDGET_MAX_DURATION_MS=8000
+BUDGET_MAX_COMPLETION_RATIO=3.0
